Test: 물품 다중 이미지 업로드 테스트 추가